--- a/ayush_portfolio.html
+++ b/ayush_portfolio.html
@@ -81,8 +81,7 @@
         <h1>Ayush Kumar Verma</h1>
         <p>Coder | Developer | Tech Enthusiast</p>
         <div class="social-links">
-            <a href="https://github.com/Ayushverma41" target="_blank" rel="noopener noreferrer">GitHub</a>
-            
+            <a href="https://github.com/Ayushverma41" target="_blank">GitHub</a>
             <a href="https://in.linkedin.com/in/ayush-verma-230186328" target="_blank">LinkedIn</a>
         </div>
     </header>
