--- a/ayush_portfolio.html
+++ b/ayush_portfolio.html
@@ -82,6 +82,7 @@
         <p>Coder | Developer | Tech Enthusiast</p>
         <div class="social-links">
             <a href="https://github.com/Ayushverma41" target="_blank">GitHub</a>
+            <a href="https://docs.google.com/document/d/1yrcuf8odL_I_9aVsgjL2jL8ctS_VefoS2W-00xTpSp8/edit?usp=drivesdk" target="_blank">Resume</a>
             <a href="https://in.linkedin.com/in/ayush-verma-230186328" target="_blank">LinkedIn</a>
         </div>
     </header>
@@ -89,10 +90,10 @@
     <section class="projects">
         <h2>Projects</h2>
         <div class="project">
-            <a href="https://your-project-link1.com" target="_blank">Project 1 - E-commerce Recommendation System</a>
+            <a href="https://github.com/Ayushverma41/Recommendation-system.git">Project 1 - E-commerce Recommendation System</a>
         </div>
         <div class="project">
-            <a href="https://your-project-link2.com" target="_blank">Project 2 - Portfolio Website</a>
+            <a href="https://ayushverma41.github.io/pure/Pure.html">Project 2 - E-commerce Website - PURE</a>
         </div>
         <div class="project">
             <a href="https://your-project-link3.com" target="_blank">Project 3 - Budget PC Builder</a>
