--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         Hi, I'm a growing Engineer, Your good Friend<br>
         A Skilled developer<br>
         Passionate for learning<br><br>
-        You can reach me at <b><a href="www.linkedin.com/in/ayushverma41">linkedin</a></b> or connect with me on 
+        You can reach me at <b><a href="https://www.linkedin.com/in/ayushverma41">linkedin</a></b> or connect with me on 
         <b><a href="linktr.ee/ayush21032016">linktree</a></b>.
       </p>
     </div>
