--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         A Skilled developer<br>
         Passionate for learning<br><br>
         You can reach me at <b><a href="https://www.linkedin.com/in/ayushverma41">linkedin</a></b> or connect with me on 
-        <b><a href="linktr.ee/ayush21032016">linktree</a></b>.
+        <b><a href="https://linktr.ee/ayush21032016">linktree</a></b>.
       </p>
     </div>
     <div class="image">
