--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <body>
   <div class="container">
     <div class="about">
-      <h1>Ayush Kumar Verma</h1>
+      <h1>Hi, I'm Ayush Kumar Verma</h1>
       <p>
-        Hi, I'm a growing Engineer, Your good Friend<br>
+        A growing Engineer, Your good Friend<br>
         A Skilled developer<br>
         Passionate for learning<br><br>
         You can reach me at <b><a href="https://www.linkedin.com/in/ayushverma41">linkedin</a></b> or connect with me on 
