--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </p>
     </div>
     <div class="image">
-      <img src="Cartoon Image.png" alt="My Photo">
+      <img src="Image/Profile Image.jpg" alt="My Photo">
     </div>
   </div>
 </body>
