--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background-color: #000;
+      background: linear-gradient(to top, #2e2e2e, #000000);
       color: #fff;
       display: flex;
       justify-content: center;
