--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </p>
     </div>
     <div class="image">
-      <img src="Cartoon Image.png" alt="My Photo">
+      <img src="Image/Cartoon Image.png" alt="My Photo">
     </div>
   </div>
 
