--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to top, #2e2e2e, #000000);
       color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       padding: 20px;
+      position: relative;
+      overflow: hidden;
     }
+
+    /* Video background styling */
+    .bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1; /* stay behind content */
+    }
+
     .container {
       display: flex;
       align-items: center;
@@ -28,6 +41,11 @@
       width: 100%;
       gap: 40px;
       flex-wrap: wrap;
+      position: relative;
+      z-index: 1;
+      background: rgba(0, 0, 0, 0.6); /* dark overlay for readability */
+      padding: 20px;
+      border-radius: 12px;
     }
     .about {
       flex: 1;
@@ -114,6 +132,12 @@
   </style>
 </head>
 <body>
+  <!-- Background Video -->
+  <video autoplay muted loop playsinline class="bg-video">
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
   <div class="container">
     <div class="about">
       <h1>Hi, I'm Ayush Kumar Verma</h1>
@@ -164,7 +188,6 @@
         img.style.maxWidth = "300px";
       }
     }
-
     window.addEventListener("resize", adjustLayout);
     window.addEventListener("load", adjustLayout);
   </script>
