Revise portfolio content and structure
Updated personal information and project details in the portfolio.

--- a/New.html
+++ b/New.html
@@ -83,7 +83,7 @@
 </header>
 
 <section id="home">
-    <h1>Hello, I'm <span style="color:#64ffda">Your Name</span>.</h1>
+    <h1>Hello, I'm <span style="color:#64ffda">Ayush Kumar Verma</span>.</h1>
     <p>A Software Engineer specializing in building exceptional digital experiences.</p>
 </section>
 
@@ -107,4 +107,5 @@
 </section>
 
 </body>
+
 </html>
