Fix HTML formatting and update color scheme

--- a/New.html
+++ b/New.html
@@ -83,7 +83,7 @@
 </header>
 
 <section id="home">
-    <h1>Hello, I'm <span style="color:#64ffda">Ayush Kumar Verma</span>.</h1>
+    <h1>Hello, I'm <span style="color:#0092CC">Ayush Kumar Verma</span>.</h1>
     <p>A Software Engineer specializing in building exceptional digital experiences.</p>
 </section>
 
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
