--- a/New.html
+++ b/New.html
@@ -525,16 +525,16 @@ h2 {
                 <button class="btn-contact" id="contactToggle">CONTACT ME</button>
                 
                 <div class="contact-popups">
-                    <a href="https://github.com/yourusername" target="_blank" class="contact-circle github">
+                    <a href="https://github.com/Ayushverma41" target="_blank" class="contact-circle github">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank" class="contact-circle linkedin">
+                    <a href="www.linkedin.com/in/ayushverma41" target="_blank" class="contact-circle linkedin">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="mailto:yourmail@gmail.com" class="contact-circle gmail">
+                    <a href="mailto:ayush21032016@gmail.com" class="contact-circle gmail">
                         <i class="fas fa-envelope"></i>
                     </a>
-                    <a href="https://linktr.ee/yourusername" target="_blank" class="contact-circle linktree">
+                    <a href="https://linktr.ee/ayush21032016" target="_blank" class="contact-circle linktree">
                         <i class="fas fa-link"></i>
                     </a>
                 </div>
@@ -715,3 +715,4 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
