--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ h2 {
                     <a href="https://github.com/Ayushverma41" target="_blank" class="contact-circle github">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="www.linkedin.com/in/ayushverma41" target="_blank" class="contact-circle linkedin">
+                    <a href="https://www.linkedin.com/in/ayushverma41/" target="_blank" class="contact-circle linkedin">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="mailto:ayush21032016@gmail.com" class="contact-circle gmail">
@@ -715,4 +715,5 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
