--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h2 {
 .home-box {
     width: 100%;
     max-width: 1600px;
-    padding: 100px 140px;
+    padding: 120px 160px;
     background: linear-gradient(145deg, #0b0b0b, #121212);
     border: 1px solid rgba(255, 215, 0, 0.3);
     border-radius: 24px;
@@ -313,9 +313,9 @@ h2 {
     width: 320px;
     height: 320px;
     object-fit: cover;
-    border-radius: 50%;
-    border: 4px solid rgba(255, 215, 0, 0.45);
-    box-shadow: 0 0 40px rgba(255, 215, 0, 0.28);
+    border-radius: 0;   /* rectangle */
+    border: none;      /* no border */
+    box-shadow: none;  /* no shade/glow */
 }
 
 /* ---------- SUMMARY ---------- */
@@ -715,5 +715,4 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
-
 
