--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ h2 {
     </div>
 
     <div class="home-image">
-        <img src="Image/Cartoon Image.png" alt="Ayush Kumar Verma">
+        <img src="Image/Profile Image.png" alt="Ayush Kumar Verma">
     </div>
 </div>
 </section>
@@ -715,4 +715,5 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
