Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ h2 {
     </div>
 
     <div class="home-image">
-        <img src="Image/Profile Image.png" alt="Ayush Kumar Verma">
+        <img src="Image/Cartoon Image.png" alt="Ayush Kumar Verma">
     </div>
 </div>
 </section>
@@ -715,5 +715,6 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
