Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -543,8 +543,11 @@ h2 {
     </div>
 
     <div class="home-image">
-        <img src="Image/Cartoon Image.png" alt="Ayush Kumar Verma">
-    </div>
+    <img 
+        src="https://drive.google.com/uc?export=view&id=1VvMY6gNaxyQNuYlBaUFYaDmmg8IRLPuq"
+        alt="Ayush Kumar Verma"
+    >
+</div>
 </div>
 </section>
 
@@ -715,6 +718,7 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
