--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ h2 {
 
     <div class="home-image">
     <img 
-        src="https://drive.google.com/thumbnail?id=1VvMY6gNaxyQNuYlBaUFYaDmmg8IRLPuq&sz=w1000"
+        src="https://drive.google.com/uc?export=view&id=11j4jHwO3uM4W6QmhM-O7lpAvYjda_KqR"
         alt="Ayush Kumar Verma"
     >
 </div>
@@ -718,6 +718,7 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
