Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -543,8 +543,7 @@ h2 {
     </div>
     <div class="home-image">
     <img
-        src="https://drive.google.com/uc?export=view&id=11j4jHwO3uM4W6QmhM-O7lpAvYjda_KqR"
-        alt="Ayush Kumar Verma"
+        src="Profile Image.jpg" alt="Ayush Kumar Verma"
     />
 </div>
 </div>
@@ -717,6 +716,7 @@ toggleBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
